--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ header h2 {
   color: #cec8ff;
 }
 
-.site_footer {
+.site-footer {
   background-image: linear-gradient(#cec8ff, white);
   padding: 20px 0;
 }
@@ -36,4 +36,9 @@ header h2 {
 
 .navbar {
   background-color: #901cad;
+}
+
+a, a:hover {
+  color: inherit;
+  text-decoration: none;
 }
